--- a/apps/hyperbolic/package.json
+++ b/apps/hyperbolic/package.json
@@ -15,6 +15,8 @@
     "@ai-sdk/groq": "^1.2.7",
     "@ai-sdk/openai": "^1.3.10",
     "@mastra/core": "^0.8.2",
+    "@mastra/deployer-cloudflare": "^0.1.17",
+    "@mastra/deployer-netlify": "^0.1.17",
     "@mastra/mcp": "^0.3.9",
     "ai": "^4.3.5",
     "mastra": "^0.4.8",
