--- a/apps/frontend/buidlai_seoul2025/package.json
+++ b/apps/frontend/buidlai_seoul2025/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mastra/client-js": "^0.1.16",
     "@radix-ui/react-slot": "^1.2.0",
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.72.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
@@ -19,7 +22,9 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "viem": "2.x",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
