--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,63 @@
 
 # Local Netlify folder
 .netlify
+
+# Environment files
+.env
+.env.local
+.env.*
+!.env.example
+.env.development
+.env.test
+.env.production
+.env.staging
+.env.backup
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+.yarn/
+.yalc/
+.pnpm-store/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+.venv/
+venv/
+ENV/
+
+# Build and dist
+dist/
+build/
+.next/
+out/
+.nuxt/
+.cache/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.DS_Store
+Thumbs.db
+.vercel
+.turbo
