--- a/apps/frontend/buidlai_seoul2025/package.json
+++ b/apps/frontend/buidlai_seoul2025/package.json
@@ -15,6 +15,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
+    "@tanstack/react-router": "^1.115.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
@@ -28,6 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tanstack/react-router-devtools": "^1.115.3",
+    "@tanstack/router-plugin": "^1.115.3",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
