--- a/apps/frontend/buidlai_seoul2025/package.json
+++ b/apps/frontend/buidlai_seoul2025/package.json
@@ -19,10 +19,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
+    "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
+    "tsx": "^4.19.3",
     "tw-animate-css": "^1.2.5",
     "viem": "2.x",
     "wagmi": "^2.14.16"
